Noteworthy changes in version 1.0.6
------------------------------------------------

 * Support SHA-{384,512} based signature generation.


Noteworthy changes in version 1.0.5 (2009-01-09)
------------------------------------------------

 * Minor bug fixes.


Noteworthy changes in version 1.0.4 (2008-09-22)
------------------------------------------------

 * Write smimeCapabilities according to RFC3851 to help Mozilla.

 * Support DSA.

 * The visibility attribute is now used if supported by the toolchain.


Noteworthy changes in version 1.0.3 (2008-02-12)
------------------------------------------------

 * Minor bug fixes.

 * Include the used hash algorithm in sig-val structures.

 * Fix for unknown tags in issuerAltName and subjectAltName.


Noteworthy changes in version 1.0.2 (2007-07-04)
------------------------------------------------
 
 * Support for SHA-2.

 * Fixed a couple of memory leaks.

 * Experimental support for ECDSA.

 * Minor portability fixes.

 * Switched to GPLv3.


Noteworthy changes in version 1.0.1 (2006-11-29)
------------------------------------------------

 * Fixes for certificates lacking certain objects.

 * Fixes to allow building on systems with a broken ar.


Noteworthy changes in version 1.0.0 (2006-08-31)
------------------------------------------------

 * OCSP nonces are now checked to detect replay attacks.

 * OCSP extensions may no be retrieved.

 * Implemented ksba_ocsp_get_responder_id which used to always return
   an error code not_implemented.  Thus we can assume that the
   function has never been used and we don't need to see this as an
   API break.

 * Interface changes relative to the 0.9.16 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_ocsp_get_extension        NEW
 ksba_ocsp_get_responder_id     CHANGED: No ABI break.


Noteworthy changes in version 0.9.16 (2006-08-01)
-------------------------------------------------

 * Fixed a character set conversion bug in BMPStrings.
