@@ -1,3 +1,8 @@
+2009-05-28  Werner Koch  <wk@g10code.com>
+
+	* der-encoder.c (_ksba_der_store_null, sum_up_lengths): Actually
+	write out NULL tags.
+
 2009-03-26  Werner Koch  <wk@g10code.com>
 
 	* cms.h (struct certlist_s): Allow for SHA-512.
